# fairdata-metax-v3

./: .coveragerc  .dockerignore  .env.template  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .prettierignore  AUTHORS.md  Dockerfile  README.md  dev-requirements.txt  docker-compose-dev.yaml  first_time_setup.sh  generate_reference.py  manage.py  mkdocs.yml  pyproject.toml  refdata_fields.py  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/: dependabot.yml
.github/workflows/: django.yml  ruff.yml
docs/: SUMMARY.md  authors.rst  conf.py  django-models.md  extra.css  gen_ref_pages.py  index.md  index.rst
docs/contributing/: caching.md  dependencies.md  external-docs.md  index.md  policy.md  testing-and-documentation.md  token-authentication.md
docs/contributing/project-structure/: index.md
docs/developer-guide/: adapter.md  dependencies-index.md  dependencies.md  index.md  install.md
docs/developer-guide/contributing/: api-endpoints.md  django-models.md  index.md  project-structure.md  writing-documentation.md
docs/developer-guide/dependencies/: third-party-libraries.md
docs/developer-guide/install/: docker.md  index.md  sso-authentication.md  token-authentication.md
docs/reference/: SUMMARY.md  django-models.md  django-serializers.md  django-views.md  unit-tests.md
docs/reference/apps/actors/: index.md  models.md
docs/reference/apps/core/: admin.md  factories.md  helpers.md  index.md  management.md  mixins.md  models.md  serializers.md  views.md
docs/reference/tests/: conftest.md  fixtures.md
docs/reference/tests/behave/: index.md
docs/reference/tests/unit/: index.md
docs/reference/tests/utils/: matchers.md  utils.md
docs/user-guide/: V1-V3-migration-guide.md  data-catalog-api.md  datasets-api.md  differences-from-dcat.md  end-user-access.md  files-api.md  index.md  migration.md  quickstart.md  reference-data.md  user-access.md
docs/user-guide/migration/: files-api-changes.md  index.md
hooks/: HOOKS.md  post-commit
src/apps/actors/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  views.py
src/apps/actors/local_data/: organizations.csv
src/apps/actors/migrations/: 0001_initial.py  0001_squashed_0005_auto_20231019_1712.py  0002_alter_actor_person.py  0002_auto_20221025_1402.py  0002_auto_20231026_1513.py  0002_initial.py  0003_auto_20230807_1334.py  0003_auto_20231124_0901.py  0003_person_homepage.py  0004_auto_20230928_1442.py  0004_auto_20240220_1351.py  0004_quote_org_url.py  0005_auto_20240311_1434.py  0006_alter_actor_system_creator_and_more.py
src/apps/actors/services/: organization_indexer.py
src/apps/cache/: apps.py  caches.py  middleware.py  serializer_cache.py
src/apps/common/: admin.py  context.py  copier.py  datacitedata.py  exceptions.py  filters.py  generators.py  helpers.py  history.py  inspectors.py  locks.py  mail.py  managers.py  mixins.py  models.py  pagination.py  permissions.py  profiling.py  renderers.py  responses.py  search.py  serializers.py  tasks.py  views.py
src/apps/common/migrations/: 0001_initial.py
src/apps/common/serializers/: __init__.py  fields.py  inspectors.py  serializers.py  validators.py
src/apps/core/: admin.py  apps.py  cache.py  checks.py  core_urls.py  factories.py  helpers.py  mixins.py  models.py  pagination.py  permissions.py  renderers.py  search.py  signals.py
src/apps/core/managers/: DataCatalog.py
src/apps/core/migrations/: 0001_initial.py  0001_squashed_0026_auto_20231019_1712.py  0002_auto_20231026_1513.py  0002_initial.py  0003_auto_20220810_1631.py  0003_auto_20230119_1253.py  0003_auto_20230426_1457.py  0003_auto_20231026_1539.py  0003_catalogrecord.py  0003_initial.py  0003_remove_datasetlicense_license.py  0004_alter_catalogrecord_data_catalog.py  0004_auto_20220811_1006.py  0004_auto_20230123_1645.py  0004_datasetdirectorymetadata_datasetfilemetadata.py  0004_datastorage.py  0004_temporal_temporal_coverage.py  0005_alter_dataset_data_catalog_and_more.py  0005_auto_20230123_1645.py  0005_auto_20230526_1351.py  0005_auto_20231103_1312.py  0005_contract_system_creator.py  0005_distribution_file.py  0006_add_preservation.py  0006_alter_accessrights_options_and_more.py  0006_auto_20220905_1437.py  0006_auto_20230123_1716.py  0006_auto_20230526_1606.py  0006_remove_datasetlicense_license.py  0007_auto_20221107_1039.py  0007_auto_20230208_0959.py  0007_fileset.py  0007_legacydataset_ignored_legacy_values.py  0007_move_preservation.py  0008_auto_20221107_1049.py  0008_auto_20230222_1549.py  0008_copy_dataset_files.py  0008_datasetlicense_title_and_more.py  0008_remove_old_preservation_fields.py  0009_alter_accessrights_options.py  (+117 more)
src/apps/core/models/: __init__.py  abstracts.py  access_rights.py  catalog_record.py  concepts.py  contract.py  data_catalog.py  data_services.py  distribution.py  entity.py  file_metadata.py  files.py  legacy.py  legacy_compatibility.py  legacy_converter.py  legacy_versions.py  mixins.py  organization_statistics.py  preservation.py  provenance.py  (+3 more)
src/apps/download/: apps.py  views.py
src/apps/files/: admin.py  factories.py  functions.py  helpers.py  permissions.py  signals.py  urls.py
src/apps/refdata/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/apps/rems/: admin.py  apps.py  email.py  form_builder.py  mocks.py  models.py  rems_service.py  rems_session.py  serializers.py  signals.py  types.py  views.py
src/apps/router/: apps.py  router.py  urls.py
src/apps/users/: admin.py  apps.py  authentication.py  factories.py  forms.py  middleware.py  models.py  permissions.py  serializers.py  signals.py  sso_client.py  urls.py  views.py
src/metax_service/: asgi.py  settings.py  urls.py  wsgi.py
src/metax_service/settings/: __init__.py
static/: admin.css  styles.css
templates/drf-yasg/: swagger-ui.html
templates/rest_framework/: api.html  base.html
tests/: conftest.py
tests/behave/: BDD.md
tests/behave/features/: conftest.py
tests/unit/apps/: conftest.py
tests/unit/swagger/: test_swagger.py
tests/utils/: __init__.py  matchers.py  utils.py
(+901 files in other folders)
