[tool.poetry]
name = "fairdata-metax-service"
version = "0.1.0"
description = ""
license = "GPL-2.0-only"
authors = [
    "Atro Himanen <atro.himanen@csc.fi>",
    "Ismo Torvinen <ismo.torvinen@bearit.fi>",
    "Jori Niemi <jori.niemi@bearit.fi>",
    "Pekka Tiainen <aptiaine@csc.fi>",
    "Sini Saarinen <sini.saarinen@csc.fi>",
    "Toni Nurmi <tonurmi@csc.fi>"
]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.8.10"
Django = "<5.0"
djangorestframework = "^3.15.2"
django-model-utils = "^5.0.0"
django-split-settings = "^1.2.0"
python-dotenv = "^1.0.1"
django-extensions = "^3.2.3"
drf-yasg = "^1.21.8"
mkdocs-material = "^9.5.49"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
rdflib = "^7.0.0"
django-filter = "^24.3"
factory-boy = "^3.3.0"
inflection = "^0.5.1"
django-simple-history = "^3.7.0"
httpx = "^0.28.1"
deepdiff = "^8.1.1"
gunicorn = "^23.0.0"
environs = "^11.2.1"
django-watchman = "^1.3.0"
python-dateutil = "^2.8.2"
django-polymorphic = "^3.1.0"
django-cors-headers = "^4.3.0"
django-rest-knox = "^4.2.0"
pyjwt = "^2.9.0"
pymemcache = "^4.0.0"
django-cachalot = "^2.7.0"
django-watson = "^1.6.3"
coreapi = "^2.3.3"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}
mkdocstrings-python = "^1.11.1"
pyyaml = "^6.0.2"
drf-access-policy = "^1.5.0"
django-hijack = "^3.4.1"
shapely = "^2.0.6"
django-json-widget = "^2.0.1"
datacite = "^1.2.0"
elementpath = "^4.6.0"
lxml = "^5.1.0"
requests-mock = "^1.11.0"
psycopg = {extras = ["binary"], version = "^3.2.2"}
isort = "^5.13.2"
drf-nested-routers = "^0.94.1"
msgspec = "^0.18.6"
django-q2 = "^1.7.4"
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
django-silk = "^5.0.4"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"
django-debug-toolbar = "^4.2.0"
pytest-django = "^4.9.0"
tox = "^4.20.0"
werkzeug = "^3.0.4"
pytest-mock = "^3.14.0"
requests-mock = "^1.11.0"
pymdown-extensions = "^10.10.2"
jsonmodels = "^2.7.0"
pyopenssl = "^24.2.1"
black = "^24.8.0"
bpython = "^0.24"
django-test-migrations = "^1.3.0"
pip-audit = "^2.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
force-exclude = "src/apps/[^/]+/migrations/"
line-length = 99

[tool.isort]
profile = "black"
src_paths = ["src", "test"]
known_third_party = ["django", "djangorestframework"]
line_length = 99
extend_skip_glob = ["*/migrations/*"]
combine_as_imports = true
group_by_package = true
