[project]
name = "fairdata-metax-service"
version = "0.1.0"
description = ""
authors = [
    { name = "Atro Himanen", email = "atro.himanen@csc.fi" },
    { name = "Inka-Liina Lauranto", email = "inka-liina.lauranto@csc.fi" },
    { name = "Ismo Torvinen", email = "ismo.torvinen@csc.fi" },
    { name = "Janne Pulkkinen", email ="janne.pulkkinen@csc.fi" },
    { name = "Jori Niemi", email = "jori.niemi@twoday.com" },
    { name = "Pekka Tiainen", email = "aptiaine@csc.fi" },
    { name = "Sini Bäckman", email = "sbackman@csc.fi" },
    { name = "Sini Saarinen" },
    { name = "Toni Nurmi" },
]
requires-python = ">=3.12,<4.0.0"
readme = "README.md"
license = "GPL-2.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "Django>=5.2.11,<6",
    "djangorestframework>=3.16.1,<4",
    "django-model-utils>=5.0.0,<6",
    "django-split-settings>=1.3.2,<2",
    "python-dotenv>=1.2.1,<2",
    "django-extensions>=4.1,<5",
    "drf-yasg>=1.21.11,<2",
    "mkdocs-material>=9.6.23,<10",
    "mkdocs-literate-nav>=0.6.2,<0.7",
    "mkdocs-section-index>=0.3.10,<0.4",
    "rdflib>=7.4.0,<8",
    "django-filter>=25.2,<26",
    "factory-boy>=3.3.3,<4",
    "inflection>=0.5.1,<0.6",
    "django-simple-history>=3.10.1,<4",
    "deepdiff>=8.6.1,<9",
    "gunicorn>=23.0.0,<24",
    "environs>=14.5.0,<15",
    "django-watchman>=1.3.0,<2",
    "python-dateutil>=2.8.2,<3",
    "django-polymorphic>=4.1.0,<5",
    "django-cors-headers>=4.9.0,<5",
    "django-rest-knox>=5.0.2,<6",
    "pyjwt>=2.10.1,<3",
    "pymemcache>=4.0.0,<5",
    "django-cachalot>=2.7.0,<3",
    "django-watson>=1.6.3,<2",
    "mkdocstrings>=0.30.1,<0.31",
    "mkdocstrings-python>=1.18.2,<2",
    "pyyaml>=6.0.3,<7",
    "drf-access-policy>=1.5.0,<2",
    "django-hijack>=3.7.4,<4",
    "shapely>=2.1.2,<3",
    "django-json-widget>=2.1.0,<3",
    "datacite>=1.3.1,<2",
    "lxml>=6.0.2,<7",
    "psycopg[binary]>=3.2.12,<4",
    "msgspec (>=0.21.1,<0.22.0)",
    "django-q2>=1.8.0,<2",
    "bpython>=0.26,<0.27",
    "drf-nested-routers>=0.95.0,<0.96",
    "ldap3>=2.9.1,<3",
    "numpy>=2.3.4,<3",
    "pymdown-extensions>=10.16.1,<11",
    "django-silk>=5.4.3,<6",
    "django-test-migrations>=1.5.0,<2",
    "fastuuid>=0.14.0,<0.15",
    "dpres-file-formats @ git+https://github.com/Digital-Preservation-Finland/dpres-file-formats.git",
    "djangorestframework-gis>=1.2.0,<2",
]

[dependency-groups]
dev = [
    "isort>=7.0.0,<8",
    "django-silk>=5.0.4,<6",
    "pytest>=8.4.2,<9",
    "pytest-xdist>=3.8.0,<4",
    "pytest-cov>=7.0.0,<8",
    "django-debug-toolbar>=6.1.0,<7",
    "pytest-django>=4.11.1,<5",
    "tox>=4.32.0,<5",
    "pytest-mock>=3.15.1,<4",
    "requests-mock>=1.11.0,<2",
    "jsonmodels>=2.7.0,<3",
    "black>=25.9.0,<26",
    "django-test-migrations>=1.3.0,<2",
    "elementpath>=5.0.4,<6",
    "werkzeug>=3.1.5,<4",
    "pyopenssl>=25.3.0,<26",
    "pip-audit>=2.10.0,<3",
]

[tool.poetry]
package-mode = false

[tool.uv]
default-groups = "all"

[tool.black]
force-exclude = "src/apps/[^/]+/migrations/"
line-length = 99

[tool.isort]
profile = "black"
src_paths = ["src", "test"]
known_third_party = ["django", "djangorestframework"]
line_length = 99
extend_skip_glob = ["*/migrations/*"]
combine_as_imports = true
group_by_package = true
